User Input Done. Start Type Conversion

--- a/User Input/index.html
+++ b/User Input/index.html
@@ -4,12 +4,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JavaScript Variables </title>
+    <title>JavaScript User Input </title>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
 
+    <label id="mylabel"> Enter Your Name: </label> <br>
+    <input type="text" name="Name" id="myText"> <br>
+    <button type="submit" id="myBtn">Submit</button>
 
     <script src="index.js"></script>
 </body>
